<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_our_coffee">

    <fragment
        android:id="@+id/nav_our_coffee"
        android:name="com.example.assignmentdrawer.ui.our_coffee.OurCoffeeFragment"
        android:label="@string/menu_our_coffee"
        tools:layout="@layout/fragment_our_coffee" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.assignmentdrawer.ui.menu.MenuFragment"
        android:label="@string/menu_our_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_club"
        android:name="com.example.assignmentdrawer.ui.club.ClubFragment"
        android:label="@string/menu_club"
        tools:layout="@layout/fragment_club" />

    <fragment
        android:id="@+id/nav_beans"
        android:name="com.example.assignmentdrawer.ui.beans.BeansFragment"
        android:label="@string/menu_beans"
        tools:layout="@layout/fragment_beans" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.assignmentdrawer.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

</navigation>